<!--
  ~ /*
  ~  * MIT License
  ~  *
  ~  * Copyright (c) 2017 Enrico Bruno Del Zotto
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<resources>
    <string name="app_name">Joke</string>
    <string name="bt_random_joke">Random joke</string>
    <string name="bt_text_input">Text input</string>
    <string name="bt_never_ending_list">Never ending list</string>
    <string name="bt_dismiss">Dismiss</string>
    <string name="bt_submit">Submit</string>
    <string name="bt_checkbox">Exclude explicit content</string>
    <string name="hint_edit_text">Your full name!</string>
    <string name="title_text_input_joke">Joke for: </string>
</resources>
