...
        android:gravity="center"
        android:orientation="vertical"

        >

        <EditText
            android:id="@+id/text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:hint="@string/hint_edit_text"
            android:maxLines="1"
            android:lines="1"
...
